styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1 {
    @apply text-2xl font-bold;
  }
  h2 {
    @apply text-xl font-semibold;
  }
  h3 {
    @apply text-lg font-semibold;
  }
}

html,
body {
  padding: 0;
  margin: 0;
  background-color: #0d1117;
  font-family: "Rubik", sans-serif;
  color: #c9d1d9;
}

p {
  line-height: 1.6em;
}

* {
  box-sizing: border-box;
}

* {
  scrollbar-width: thin;
  scrollbar-color: #0d1117;
}

*::-webkit-scrollbar {
  display: none;
}

a:hover {
  color: #fff;
}

pre {
  border-radius: 4px;
  padding: 1em;
  margin-top: 1em;
  margin-bottom: 1em;
  background-color: #161b22;
}

